--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,6 +1,6 @@
 .home {
     min-height: calc(100vh - 70px);
-    background-color: #1935c4;
+    background-color: rgb(111, 191, 249);
     width: 100%;
     overflow-x: hidden;
 
@@ -25,7 +25,7 @@
             object-fit: cover;
             object-position: top;
             border-radius: 10px;
-            box-shadow: 0 20px 20px rgba(0, 0, 0, .6);
+            box-shadow: 5px 20px 20px rgba(0, 0, 0, .6);
         }
     }
 
